--- a/home/src/app/Layout/header/header.component.scss
+++ b/home/src/app/Layout/header/header.component.scss
@@ -57,6 +57,7 @@
               .sp-dropdown-li {
                 padding: 5px 20px;
                 border-bottom: 1px solid #eee;
+                position: relative;
                 .sp-dropdown-li-wrap {
                   display: flex;
                   position: relative;
