fix cpn  khach hang noi ve chung toi

--- a/home/src/app/app.component.html
+++ b/home/src/app/app.component.html
@@ -1,8 +1,4 @@
 <app-header></app-header>
-
-<!-- <app-dich-vu></app-dich-vu> -->
+<app-dich-vu></app-dich-vu>
 <app-san-xuat-phim-hinh-anh></app-san-xuat-phim-hinh-anh>
-
-<app-khach-hang-phan-hoi></app-khach-hang-phan-hoi>
-
-<app-bottom></app-bottom>
+<app-bottom [checkCount]="true" ></app-bottom>
