--- a/home/src/app/Layout/bottom/sp-count/sp-count.component.html
+++ b/home/src/app/Layout/bottom/sp-count/sp-count.component.html
@@ -1,7 +1,7 @@
 
   <div id="sp-count">
     <div class="container">
-      <div class="row">
+      <div *ngIf="checkHiden" class="row">
         <div class="col-sm-12">
           <app-khach-hang-noi-ve-chung-toi></app-khach-hang-noi-ve-chung-toi>
         </div>
