--- a/home/src/app/Layout/bottom/bottom.component.html
+++ b/home/src/app/Layout/bottom/bottom.component.html
@@ -1,4 +1,4 @@
-<app-sp-count [checkHiden] =checkCount></app-sp-count>
+<app-sp-count [checkHiden] ="checkCount"></app-sp-count>
 <app-sp-fixed-btm></app-sp-fixed-btm>
 <app-sp-bottom></app-sp-bottom>
 <app-sp-final></app-sp-final>
