--- a/home/src/app/Layout/bottom/sp-count/khach-hang-noi-ve-chung-toi/khach-hang-noi-ve-chung-toi.component.html
+++ b/home/src/app/Layout/bottom/sp-count/khach-hang-noi-ve-chung-toi/khach-hang-noi-ve-chung-toi.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div id="Link">
       <div class="row body-wrapper">
-          <div id="sp-breadcrumb2" class="col-lg-12 ">
+          <!-- <div id="sp-breadcrumb2" class="col-lg-12 ">
               <ol class="breadcrumb">
                   <li class="float-left">
                       <span class="divider fa fa-location" aria-hidden="true"></span>
@@ -19,7 +19,7 @@
 
 
               </ol>
-          </div>
+          </div> -->
 
 
           <div class="content">
