--- a/home/src/app/app.component.html
+++ b/home/src/app/app.component.html
@@ -1,4 +1,3 @@
 <app-header></app-header>
-<app-dich-vu></app-dich-vu>
-<app-san-xuat-phim-hinh-anh></app-san-xuat-phim-hinh-anh>
+<router-outlet></router-outlet>
 <app-bottom [checkCount]="true" ></app-bottom>
