--- a/home/src/app/Layout/bottom/sp-bottom/sp-bottom.component.scss
+++ b/home/src/app/Layout/bottom/sp-bottom/sp-bottom.component.scss
@@ -7,27 +7,10 @@
     .sp-bottom-wrap {
       padding: 60px 0;
       color: #a2a2a2;
-       .title {
-        font-weight: 700;
-        margin: 0 0 30px;
-        padding-top: 20px;
+      .sp-bottom-item {
+        margin-bottom: 30px;
 
-      }
-       .des {
-        display: flex;
-        flex-direction: column;
-         .des-item {
-          margin-bottom: 8px;
-        }
       }
     }
   }
-}
-
-.outstanding{
-
-  font-weight: 700;
-  color: #fff;
-  padding-top: 10px;
-  font-size: 18px;
 }
