--- a/home/src/app/Layout/bottom/sp-count/diem-khac-biet/diem-khac-biet.component.html
+++ b/home/src/app/Layout/bottom/sp-count/diem-khac-biet/diem-khac-biet.component.html
@@ -11,76 +11,35 @@
   </div>
   <div class="row">
     <div class="addons">
-      <div class="col-sm-3">
+      <div *ngFor="let item of data" class="col-sm-3">
         <div class="addons-item">
           <div class="addons-images">
             <div class="img">
-              <img src="https://vietstarmax.vn/images/0new/1000kh.png" alt="">
+              <img src="{{item.img}}" alt="">
             </div>
-            <div class="num">1000<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
-              <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z"/>
-            </svg>  </div>
+            <div class="num">{{item.num}}<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                class="bi bi-plus-lg" viewBox="0 0 16 16">
+                <path fill-rule="evenodd"
+                  d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z" />
+              </svg> </div>
           </div>
           <div class="addons-text">
-            <div class="addons-text-item">Khách hàng</div>
-            <div class="addons-text-item">đã và đang hợp tác</div>
+            <div *ngFor="let item2 of item.text" class="addons-text-item">{{item2}}</div>
+            <!-- <div class="addons-text-item">đã và đang hợp tác</div> -->
           </div>
         </div>
       </div>
-      <div class="col-sm-3">
-        <div class="addons-item">
-          <div class="addons-images">
-            <div class="img">
-              <img src="https://vietstarmax.vn/images/0new/1000kh.png" alt="">
-            </div>
-            <div class="num">1000<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
-              <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z"/>
-            </svg>  </div>
-          </div>
-          <div class="addons-text">
-            <div class="addons-text-item">Khách hàng</div>
-            <div class="addons-text-item">đã và đang hợp tác</div>
-          </div>
-        </div>
-      </div>  <div class="col-sm-3">
-        <div class="addons-item">
-          <div class="addons-images">
-            <div class="img">
-              <img src="https://vietstarmax.vn/images/0new/1000kh.png" alt="">
-            </div>
-            <div class="num">1000<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
-              <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z"/>
-            </svg>  </div>
-          </div>
-          <div class="addons-text">
-            <div class="addons-text-item">Khách hàng</div>
-            <div class="addons-text-item">đã và đang hợp tác</div>
-          </div>
-        </div>
-      </div>  <div class="col-sm-3">
-        <div class="addons-item">
-          <div class="addons-images">
-            <div class="img">
-              <img src="https://vietstarmax.vn/images/0new/1000kh.png" alt="">
-            </div>
-            <div class="num">1000<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
-              <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z"/>
-            </svg>  </div>
-          </div>
-          <div class="addons-text">
-            <div class="addons-text-item">Khách hàng</div>
-            <div class="addons-text-item">đã và đang hợp tác</div>
-          </div>
-        </div>
+
+    </div>
+    <div class="row">
+      <div class="timhieuthem">
+        <a href="">Tìm Hiểu Thêm <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor"
+            class="bi bi-chevron-right" viewBox="0 0 16 16">
+            <path fill-rule="evenodd"
+              d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+          </svg></a>
       </div>
     </div>
-  <div class="row">
-    <div class="timhieuthem">
-      <a href="">Tìm Hiểu Thêm <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
-        <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
-      </svg></a>
-    </div>
-  </div>
   </div>
   <div class="row"></div>
 </div>
