--- a/home/src/app/Layout/bottom/sp-count/logo-khach-hang/logo-khach-hang.component.html
+++ b/home/src/app/Layout/bottom/sp-count/logo-khach-hang/logo-khach-hang.component.html
@@ -1,128 +1,11 @@
 <div id="logoKhachHang">
+
   <div class="lgkh-wrap">
-    <div class="lgkh-item">
+    <div *ngFor="let item of dataKhachHang" class="lgkh-item">
       <div class="lgkh-item-wrap">
-        <img src="https://vietstarmax.vn/images/0new/kh/bidv.webp" alt="">
+        <img src="{{item.src}}" alt="{{item.alt}}">
       </div>
     </div>
-    <div class="lgkh-item">
-      <div class="lgkh-item-wrap">
-        <img src="https://vietstarmax.vn/images/0new/kh/bidv.webp" alt="">
-
-      </div>
-    </div>
-    <div class="lgkh-item">
-      <div class="lgkh-item-wrap">
-        <img src="https://vietstarmax.vn/images/0new/kh/bidv.webp" alt="">
-
-      </div>
-    </div>
-    <div class="lgkh-item">
-      <div class="lgkh-item-wrap">
-        <img src="https://vietstarmax.vn/images/0new/kh/bidv.webp" alt="">
-
-      </div>
-    </div>
-    <div class="lgkh-item">
-      <div class="lgkh-item-wrap">
-        <img src="https://vietstarmax.vn/images/0new/kh/bidv.webp" alt="">
-
-      </div>
-    </div>
-    <div class="lgkh-item">
-      <div class="lgkh-item-wrap">
-        <img src="https://vietstarmax.vn/images/0new/kh/bidv.webp" alt="">
-
-      </div>
-    </div>
-    <div class="lgkh-item">
-      <div class="lgkh-item-wrap">
-        <img src="https://vietstarmax.vn/images/0new/kh/bidv.webp" alt="">
-
-      </div>
-    </div>
-    <div class="lgkh-item">
-      <div class="lgkh-item-wrap">
-        <img src="https://vietstarmax.vn/images/0new/kh/bidv.webp" alt="">
-
-      </div>
-    </div>
-    <div class="lgkh-item">
-      <div class="lgkh-item-wrap">
-        <img src="https://vietstarmax.vn/images/0new/kh/bidv.webp" alt="">
-
-      </div>
-    </div>
-    <div class="lgkh-item">
-      <div class="lgkh-item-wrap">
-        <img src="https://vietstarmax.vn/images/0new/kh/bidv.webp" alt="">
-
-      </div>
-    </div>
-
-
-  </div>
-  <div class="lgkh-wrap">
-    <div class="lgkh-item">
-      <div class="lgkh-item-wrap">
-        <img src="https://vietstarmax.vn/images/0new/kh/bidv.webp" alt="">
-      </div>
-    </div>
-    <div class="lgkh-item">
-      <div class="lgkh-item-wrap">
-        <img src="https://vietstarmax.vn/images/0new/kh/bidv.webp" alt="">
-
-      </div>
-    </div>
-    <div class="lgkh-item">
-      <div class="lgkh-item-wrap">
-        <img src="https://vietstarmax.vn/images/0new/kh/bidv.webp" alt="">
-
-      </div>
-    </div>
-    <div class="lgkh-item">
-      <div class="lgkh-item-wrap">
-        <img src="https://vietstarmax.vn/images/0new/kh/bidv.webp" alt="">
-
-      </div>
-    </div>
-    <div class="lgkh-item">
-      <div class="lgkh-item-wrap">
-        <img src="https://vietstarmax.vn/images/0new/kh/bidv.webp" alt="">
-
-      </div>
-    </div>
-    <div class="lgkh-item">
-      <div class="lgkh-item-wrap">
-        <img src="https://vietstarmax.vn/images/0new/kh/bidv.webp" alt="">
-
-      </div>
-    </div>
-    <div class="lgkh-item">
-      <div class="lgkh-item-wrap">
-        <img src="https://vietstarmax.vn/images/0new/kh/bidv.webp" alt="">
-
-      </div>
-    </div>
-    <div class="lgkh-item">
-      <div class="lgkh-item-wrap">
-        <img src="https://vietstarmax.vn/images/0new/kh/bidv.webp" alt="">
-
-      </div>
-    </div>
-    <div class="lgkh-item">
-      <div class="lgkh-item-wrap">
-        <img src="https://vietstarmax.vn/images/0new/kh/bidv.webp" alt="">
-
-      </div>
-    </div>
-    <div class="lgkh-item">
-      <div class="lgkh-item-wrap">
-        <img src="https://vietstarmax.vn/images/0new/kh/bidv.webp" alt="">
-
-      </div>
-    </div>
-
 
   </div>
 </div>
