--- a/home/src/app/Layout/bottom/sp-fixed-btm/sp-fixed-btm.component.scss
+++ b/home/src/app/Layout/bottom/sp-fixed-btm/sp-fixed-btm.component.scss
@@ -38,6 +38,8 @@
           font-size: 31px;
           margin-bottom: 0px;
           color: #fff;
+          padding-top: 30px;
+
         }
         .des {
           font-size: 16px;
@@ -49,6 +51,15 @@
           border: 2px solid #fff;
           width: fit-content;
           border-radius: 25px;
+
+          animation-name: btnDangKyTuVan;
+          animation-duration: 0.5s;
+          animation-timing-function: linear;
+          animation-delay: 0s;
+          animation-iteration-count: infinite;
+          animation-direction: alternate;
+
+
           .btn-sologa-wrap {
             display: flex;
             padding: 5px 20px;
