--- a/home/src/app/page/dich-vu/san-xuat-phim-hinh-anh/san-xuat-phim-hinh-anh.component.scss
+++ b/home/src/app/page/dich-vu/san-xuat-phim-hinh-anh/san-xuat-phim-hinh-anh.component.scss
@@ -32,6 +32,12 @@
                 max-width: 500px;
                 display: flex;
                 justify-content: center;
+                animation-name: btnDangKyTuVan;
+                animation-duration: 0.5s;
+                animation-timing-function: linear;
+                animation-delay: 0s;
+                animation-iteration-count: infinite;
+                animation-direction: alternate;
                 button.dkbtn{
                     border-color: #b8292f;
                     background-color: transparent;
@@ -91,13 +97,13 @@
                     margin-top: 15px;
                 }
             }
-    
+
             .desc{
                 text-align: center;
                 color: rgb(0,0,0);
             }
         }
-        
+
         .infomation{
             .items{
                 display: flex;
@@ -141,7 +147,7 @@
                             }
                         }
                     }
-    
+
                     &:last-child{
                         margin-right: 0px;
                     }
@@ -223,7 +229,7 @@
                                 text-decoration: none;
                                 transition: all ease 0.2s;
                             }
-    
+
                             &:hover{
                                 background: #b8292f;
                                 a{
@@ -231,11 +237,11 @@
                                 }
                             }
                         }
-        
+
                     }
                 }
             }
 
-        } 
+        }
     }
 }
