--- a/home/src/styles.scss
+++ b/home/src/styles.scss
@@ -51,3 +51,13 @@ a {
   margin-right: auto;
   margin-left: auto;
 }
+
+
+@keyframes btnDangKyTuVan {
+  0% {
+    margin-left: 6px;
+}
+100% {
+    margin-left: 0;
+}
+}
