--- a/home/src/styles.scss
+++ b/home/src/styles.scss
@@ -51,3 +51,15 @@ a {
   margin-right: auto;
   margin-left: auto;
 }
+
+@keyframes example1 {
+  0%   {margin-left: 6px;}
+  100% {margin-left: 0;}
+}
+
+@keyframes example {
+  0%   {transform:rotate(10deg)}
+  100% {transform:rotate(-10deg)}
+}
+
+
