--- a/home/src/app/Layout/bottom/sp-fixed-btm/sp-fixed-btm.component.html
+++ b/home/src/app/Layout/bottom/sp-fixed-btm/sp-fixed-btm.component.html
@@ -28,8 +28,8 @@
         <div class="sologan-wrap">
           <div class="title">BẮT ĐẦU DỰ ÁN CỦA BẠN CÙNG CHUYÊN GIA TRUYỀN THÔNG</div>
           <div class="des">Hơn 1000 doanh nghiệp đã và đang đồng hành cùng VIETSTARMAX xây dựng dự án truyền thông</div>
-          <div class="btn-sologan">
-            <div class="btn-sologa-wrap">
+          <div class="btn-dangkytuvan">
+            <div class="btn-dangkytuvan-wrap">
               <div class="images">
                 <img src="https://vietstarmax.vn/images/0new/contact-ico.png" alt="">
               </div>
